--- a/top_storylines.html
+++ b/top_storylines.html
@@ -212,48 +212,27 @@
                     <div class="rank top-3">#1</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/sterpfi" target="_blank">sterpfi</a>
+                            <a href="https://lichess.org/@/HandKnit" target="_blank">HandKnit</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/betolini" target="_blank">betolini</a>
+                            <a href="https://lichess.org/@/axp156" target="_blank">axp156</a>
                         </div>
-                        <div class="teams">47 is not prime number vs Botvinnik prepared, we forgot.</div>
+                        <div class="teams">Swindlers, patzers, and pawn pushers vs Panic! At The Chess Board</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">6.0</div>
+                        <div class="score-value">7.7</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">🔥 Both on win streaks (2W vs 2W)</span>
-                    <span class="reason">🏆 Top team battle!</span>
+                    <span class="reason">🔥 Both on win streaks (4W vs 2W)</span>
+                    <span class="reason">🏆 Huge for team standings!</span>
+                    <span class="reason">🎖️ Experience (24+150 games)</span>
                 </div>
             </div>
 
             <div class="pairing-card">
                 <div class="pairing-header">
                     <div class="rank top-3">#2</div>
-                    <div class="matchup">
-                        <div class="players">
-                            <a href="https://lichess.org/@/Logansglasses" target="_blank">Logansglasses</a>
-                            <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/Jarolos" target="_blank">Jarolos</a>
-                        </div>
-                        <div class="teams">Botvinnik prepared, we forgot. vs 47 is not prime number</div>
-                    </div>
-                    <div class="score-badge">
-                        <div class="score-value">6.0</div>
-                        <div class="score-label">hype</div>
-                    </div>
-                </div>
-                <div class="reasons">
-                    <span class="reason">🎯 jarolos's 45th game!</span>
-                    <span class="reason">🏆 Top team battle!</span>
-                </div>
-            </div>
-
-            <div class="pairing-card">
-                <div class="pairing-header">
-                    <div class="rank top-3">#3</div>
                     <div class="matchup">
                         <div class="players">
                             <a href="https://lichess.org/@/kygreek" target="_blank">kygreek</a>
@@ -275,24 +254,45 @@
 
             <div class="pairing-card">
                 <div class="pairing-header">
-                    <div class="rank ">#4</div>
+                    <div class="rank top-3">#3</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/HandKnit" target="_blank">HandKnit</a>
+                            <a href="https://lichess.org/@/Darktigr" target="_blank">Darktigr</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/axp156" target="_blank">axp156</a>
+                            <a href="https://lichess.org/@/KS_Legion_Legionowo" target="_blank">KS_Legion_Legionowo</a>
                         </div>
-                        <div class="teams">Swindlers, patzers, and pawn pushers vs Panic! At The Chess Board</div>
+                        <div class="teams">Panic! At The Chess Board vs Swindlers, patzers, and pawn pushers</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">5.7</div>
+                        <div class="score-value">5.9</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">🔥 Both on win streaks (2W vs 2W)</span>
-                    <span class="reason">🥉 3rd biggest team clash</span>
-                    <span class="reason">🎖️ Experience (24+150 games)</span>
+                    <span class="reason">🏆 Huge for team standings!</span>
+                    <span class="reason">🎖️ Experience (26+166 games)</span>
+                </div>
+            </div>
+
+            <div class="pairing-card">
+                <div class="pairing-header">
+                    <div class="rank ">#4</div>
+                    <div class="matchup">
+                        <div class="players">
+                            <a href="https://lichess.org/@/freeloon2" target="_blank">freeloon2</a>
+                            <span class="vs">vs</span>
+                            <a href="https://lichess.org/@/Meeklydim" target="_blank">Meeklydim</a>
+                        </div>
+                        <div class="teams">Swindlers, patzers, and pawn pushers vs Panic! At The Chess Board</div>
+                    </div>
+                    <div class="score-badge">
+                        <div class="score-value">5.5</div>
+                        <div class="score-label">hype</div>
+                    </div>
+                </div>
+                <div class="reasons">
+                    <span class="reason">🏆 Huge for team standings!</span>
+                    <span class="reason">🎖️ Experience (2+152 games)</span>
                 </div>
             </div>
 
@@ -301,11 +301,11 @@
                     <div class="rank ">#5</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/j3084" target="_blank">j3084</a>
+                            <a href="https://lichess.org/@/PuntCatcher" target="_blank">PuntCatcher</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/TheChessPhoenix" target="_blank">TheChessPhoenix</a>
+                            <a href="https://lichess.org/@/osumarko" target="_blank">osumarko</a>
                         </div>
-                        <div class="teams">Botvinnik prepared, we forgot. vs 47 is not prime number</div>
+                        <div class="teams">Panic! At The Chess Board vs Swindlers, patzers, and pawn pushers</div>
                     </div>
                     <div class="score-badge">
                         <div class="score-value">5.2</div>
@@ -313,8 +313,8 @@
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">🏆 Top team battle!</span>
-                    <span class="reason">🎖️ Experience (115+10 games)</span>
+                    <span class="reason">🏆 Huge for team standings!</span>
+                    <span class="reason">🎖️ Experience (2+120 games)</span>
                 </div>
             </div>
 
@@ -323,11 +323,11 @@
                     <div class="rank ">#6</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/NameGoesInHere" target="_blank">NameGoesInHere</a>
+                            <a href="https://lichess.org/@/sterpfi" target="_blank">sterpfi</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/Warvold" target="_blank">Warvold</a>
+                            <a href="https://lichess.org/@/betolini" target="_blank">betolini</a>
                         </div>
-                        <div class="teams">Hanging Pieces of Babylon vs Knight Terrors</div>
+                        <div class="teams">47 is not prime number vs Botvinnik prepared, we forgot.</div>
                     </div>
                     <div class="score-badge">
                         <div class="score-value">5.0</div>
@@ -335,14 +335,36 @@
                     </div>
                 </div>
                 <div class="reasons">
-                    <span class="reason">🔄 Rematch (0-1-0)</span>
-                    <span class="reason">🥈 2nd biggest team clash</span>
+                    <span class="reason">🔥 Both on win streaks (2W vs 6W)</span>
+                    <span class="reason">🥈 Big for team standings!</span>
                 </div>
             </div>
 
             <div class="pairing-card">
                 <div class="pairing-header">
                     <div class="rank ">#7</div>
+                    <div class="matchup">
+                        <div class="players">
+                            <a href="https://lichess.org/@/Logansglasses" target="_blank">Logansglasses</a>
+                            <span class="vs">vs</span>
+                            <a href="https://lichess.org/@/Jarolos" target="_blank">Jarolos</a>
+                        </div>
+                        <div class="teams">Botvinnik prepared, we forgot. vs 47 is not prime number</div>
+                    </div>
+                    <div class="score-badge">
+                        <div class="score-value">5.0</div>
+                        <div class="score-label">hype</div>
+                    </div>
+                </div>
+                <div class="reasons">
+                    <span class="reason">🎯 jarolos's 45th game!</span>
+                    <span class="reason">🥈 Big for team standings!</span>
+                </div>
+            </div>
+
+            <div class="pairing-card">
+                <div class="pairing-header">
+                    <div class="rank ">#8</div>
                     <div class="matchup">
                         <div class="players">
                             <a href="https://lichess.org/@/Sarahwynn" target="_blank">Sarahwynn</a>
@@ -364,7 +386,29 @@
 
             <div class="pairing-card">
                 <div class="pairing-header">
-                    <div class="rank ">#8</div>
+                    <div class="rank ">#9</div>
+                    <div class="matchup">
+                        <div class="players">
+                            <a href="https://lichess.org/@/Feet_Barbie" target="_blank">Feet_Barbie</a>
+                            <span class="vs">vs</span>
+                            <a href="https://lichess.org/@/jwwells42" target="_blank">jwwells42</a>
+                        </div>
+                        <div class="teams">Hello to all! Good old faces! vs We are the Cham's peons</div>
+                    </div>
+                    <div class="score-badge">
+                        <div class="score-value">4.9</div>
+                        <div class="score-label">hype</div>
+                    </div>
+                </div>
+                <div class="reasons">
+                    <span class="reason">❄️ Both struggling (2L vs 3L)</span>
+                    <span class="reason">🎖️ Veterans (86+210 games)</span>
+                </div>
+            </div>
+
+            <div class="pairing-card">
+                <div class="pairing-header">
+                    <div class="rank ">#10</div>
                     <div class="matchup">
                         <div class="players">
                             <a href="https://lichess.org/@/timothyha" target="_blank">timothyha</a>
@@ -381,50 +425,6 @@
                 <div class="reasons">
                     <span class="reason">🔄 Rematch (0-1-1)</span>
                     <span class="reason">🎖️ Veterans (243+69 games)</span>
-                </div>
-            </div>
-
-            <div class="pairing-card">
-                <div class="pairing-header">
-                    <div class="rank ">#9</div>
-                    <div class="matchup">
-                        <div class="players">
-                            <a href="https://lichess.org/@/gary0892" target="_blank">gary0892</a>
-                            <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/Gingersquirrelnuts" target="_blank">Gingersquirrelnuts</a>
-                        </div>
-                        <div class="teams">Hello to all! Good old faces! vs We are the Cham's peons</div>
-                    </div>
-                    <div class="score-badge">
-                        <div class="score-value">4.3</div>
-                        <div class="score-label">hype</div>
-                    </div>
-                </div>
-                <div class="reasons">
-                    <span class="reason">❄️ Both struggling (2L vs 2L)</span>
-                    <span class="reason">🎖️ Veterans (95+135 games)</span>
-                </div>
-            </div>
-
-            <div class="pairing-card">
-                <div class="pairing-header">
-                    <div class="rank ">#10</div>
-                    <div class="matchup">
-                        <div class="players">
-                            <a href="https://lichess.org/@/adande1" target="_blank">adande1</a>
-                            <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/HamSamisch" target="_blank">HamSamisch</a>
-                        </div>
-                        <div class="teams">Blunder? I hardly know her vs I literally don't Keres</div>
-                    </div>
-                    <div class="score-badge">
-                        <div class="score-value">4.2</div>
-                        <div class="score-label">hype</div>
-                    </div>
-                </div>
-                <div class="reasons">
-                    <span class="reason">🔄 Rematch (1-0-0)</span>
-                    <span class="reason">🎖️ Veterans (239+22 games)</span>
                 </div>
             </div>
 
