--- a/top_storylines.html
+++ b/top_storylines.html
@@ -212,9 +212,9 @@
                     <div class="rank top-3">#1</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/HandKnit" target="_blank">HandKnit</a>
+                            <a href="https://www.lichess4545.com/team4545/player/HandKnit/" target="_blank">HandKnit</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/axp156" target="_blank">axp156</a>
+                            <a href="https://www.lichess4545.com/team4545/player/axp156/" target="_blank">axp156</a>
                         </div>
                         <div class="teams">Swindlers, patzers, and pawn pushers vs Panic! At The Chess Board</div>
                     </div>
@@ -235,9 +235,9 @@
                     <div class="rank top-3">#2</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/kygreek" target="_blank">kygreek</a>
+                            <a href="https://www.lichess4545.com/team4545/player/kygreek/" target="_blank">kygreek</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/UpGoerFive" target="_blank">UpGoerFive</a>
+                            <a href="https://www.lichess4545.com/team4545/player/UpGoerFive/" target="_blank">UpGoerFive</a>
                         </div>
                         <div class="teams">Think Like a Grandpatzer vs Charge of the Suggestion Brigade</div>
                     </div>
@@ -257,9 +257,9 @@
                     <div class="rank top-3">#3</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/Darktigr" target="_blank">Darktigr</a>
+                            <a href="https://www.lichess4545.com/team4545/player/Darktigr/" target="_blank">Darktigr</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/KS_Legion_Legionowo" target="_blank">KS_Legion_Legionowo</a>
+                            <a href="https://www.lichess4545.com/team4545/player/KS_Legion_Legionowo/" target="_blank">KS_Legion_Legionowo</a>
                         </div>
                         <div class="teams">Panic! At The Chess Board vs Swindlers, patzers, and pawn pushers</div>
                     </div>
@@ -279,9 +279,9 @@
                     <div class="rank ">#4</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/freeloon2" target="_blank">freeloon2</a>
+                            <a href="https://www.lichess4545.com/team4545/player/freeloon2/" target="_blank">freeloon2</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/Meeklydim" target="_blank">Meeklydim</a>
+                            <a href="https://www.lichess4545.com/team4545/player/Meeklydim/" target="_blank">Meeklydim</a>
                         </div>
                         <div class="teams">Swindlers, patzers, and pawn pushers vs Panic! At The Chess Board</div>
                     </div>
@@ -301,9 +301,9 @@
                     <div class="rank ">#5</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/PuntCatcher" target="_blank">PuntCatcher</a>
+                            <a href="https://www.lichess4545.com/team4545/player/PuntCatcher/" target="_blank">PuntCatcher</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/osumarko" target="_blank">osumarko</a>
+                            <a href="https://www.lichess4545.com/team4545/player/osumarko/" target="_blank">osumarko</a>
                         </div>
                         <div class="teams">Panic! At The Chess Board vs Swindlers, patzers, and pawn pushers</div>
                     </div>
@@ -323,9 +323,9 @@
                     <div class="rank ">#6</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/sterpfi" target="_blank">sterpfi</a>
+                            <a href="https://www.lichess4545.com/team4545/player/sterpfi/" target="_blank">sterpfi</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/betolini" target="_blank">betolini</a>
+                            <a href="https://www.lichess4545.com/team4545/player/betolini/" target="_blank">betolini</a>
                         </div>
                         <div class="teams">47 is not prime number vs Botvinnik prepared, we forgot.</div>
                     </div>
@@ -345,9 +345,9 @@
                     <div class="rank ">#7</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/Logansglasses" target="_blank">Logansglasses</a>
+                            <a href="https://www.lichess4545.com/team4545/player/Logansglasses/" target="_blank">Logansglasses</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/Jarolos" target="_blank">Jarolos</a>
+                            <a href="https://www.lichess4545.com/team4545/player/Jarolos/" target="_blank">Jarolos</a>
                         </div>
                         <div class="teams">Botvinnik prepared, we forgot. vs 47 is not prime number</div>
                     </div>
@@ -367,9 +367,9 @@
                     <div class="rank ">#8</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/Sarahwynn" target="_blank">Sarahwynn</a>
+                            <a href="https://www.lichess4545.com/team4545/player/Sarahwynn/" target="_blank">Sarahwynn</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/nerja25390" target="_blank">nerja25390</a>
+                            <a href="https://www.lichess4545.com/team4545/player/nerja25390/" target="_blank">nerja25390</a>
                         </div>
                         <div class="teams">Dommaraju, I've come to bargain vs headbangingparrot</div>
                     </div>
@@ -389,9 +389,9 @@
                     <div class="rank ">#9</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/Feet_Barbie" target="_blank">Feet_Barbie</a>
+                            <a href="https://www.lichess4545.com/team4545/player/Feet_Barbie/" target="_blank">Feet_Barbie</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/jwwells42" target="_blank">jwwells42</a>
+                            <a href="https://www.lichess4545.com/team4545/player/jwwells42/" target="_blank">jwwells42</a>
                         </div>
                         <div class="teams">Hello to all! Good old faces! vs We are the Cham's peons</div>
                     </div>
@@ -411,9 +411,9 @@
                     <div class="rank ">#10</div>
                     <div class="matchup">
                         <div class="players">
-                            <a href="https://lichess.org/@/timothyha" target="_blank">timothyha</a>
+                            <a href="https://www.lichess4545.com/team4545/player/timothyha/" target="_blank">timothyha</a>
                             <span class="vs">vs</span>
-                            <a href="https://lichess.org/@/sussasun" target="_blank">sussasun</a>
+                            <a href="https://www.lichess4545.com/team4545/player/sussasun/" target="_blank">sussasun</a>
                         </div>
                         <div class="teams">Proof by Checkmate vs Rook Takes Pawnshop</div>
                     </div>
