--- a/top_storylines.html
+++ b/top_storylines.html
@@ -279,6 +279,28 @@
                     <div class="rank ">#4</div>
                     <div class="matchup">
                         <div class="players">
+                            <a href="https://www.lichess4545.com/team4545/player/timothyha/" target="_blank">timothyha</a>
+                            <span class="vs">vs</span>
+                            <a href="https://www.lichess4545.com/team4545/player/sussasun/" target="_blank">sussasun</a>
+                        </div>
+                        <div class="teams">Proof by Checkmate vs Rook Takes Pawnshop</div>
+                    </div>
+                    <div class="score-badge">
+                        <div class="score-value">5.7</div>
+                        <div class="score-label">hype</div>
+                    </div>
+                </div>
+                <div class="reasons">
+                    <span class="reason">🔄 Rematch #3 (0-1-1)</span>
+                    <span class="reason">🎖️ Veterans (243+69 games)</span>
+                </div>
+            </div>
+
+            <div class="pairing-card">
+                <div class="pairing-header">
+                    <div class="rank ">#5</div>
+                    <div class="matchup">
+                        <div class="players">
                             <a href="https://www.lichess4545.com/team4545/player/freeloon2/" target="_blank">freeloon2</a>
                             <span class="vs">vs</span>
                             <a href="https://www.lichess4545.com/team4545/player/Meeklydim/" target="_blank">Meeklydim</a>
@@ -298,7 +320,7 @@
 
             <div class="pairing-card">
                 <div class="pairing-header">
-                    <div class="rank ">#5</div>
+                    <div class="rank ">#6</div>
                     <div class="matchup">
                         <div class="players">
                             <a href="https://www.lichess4545.com/team4545/player/PuntCatcher/" target="_blank">PuntCatcher</a>
@@ -320,7 +342,7 @@
 
             <div class="pairing-card">
                 <div class="pairing-header">
-                    <div class="rank ">#6</div>
+                    <div class="rank ">#7</div>
                     <div class="matchup">
                         <div class="players">
                             <a href="https://www.lichess4545.com/team4545/player/sterpfi/" target="_blank">sterpfi</a>
@@ -342,7 +364,7 @@
 
             <div class="pairing-card">
                 <div class="pairing-header">
-                    <div class="rank ">#7</div>
+                    <div class="rank ">#8</div>
                     <div class="matchup">
                         <div class="players">
                             <a href="https://www.lichess4545.com/team4545/player/Logansglasses/" target="_blank">Logansglasses</a>
@@ -364,7 +386,7 @@
 
             <div class="pairing-card">
                 <div class="pairing-header">
-                    <div class="rank ">#8</div>
+                    <div class="rank ">#9</div>
                     <div class="matchup">
                         <div class="players">
                             <a href="https://www.lichess4545.com/team4545/player/Sarahwynn/" target="_blank">Sarahwynn</a>
@@ -386,7 +408,7 @@
 
             <div class="pairing-card">
                 <div class="pairing-header">
-                    <div class="rank ">#9</div>
+                    <div class="rank ">#10</div>
                     <div class="matchup">
                         <div class="players">
                             <a href="https://www.lichess4545.com/team4545/player/Feet_Barbie/" target="_blank">Feet_Barbie</a>
@@ -403,28 +425,6 @@
                 <div class="reasons">
                     <span class="reason">❄️ Both struggling (2L vs 3L)</span>
                     <span class="reason">🎖️ Veterans (86+210 games)</span>
-                </div>
-            </div>
-
-            <div class="pairing-card">
-                <div class="pairing-header">
-                    <div class="rank ">#10</div>
-                    <div class="matchup">
-                        <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/timothyha/" target="_blank">timothyha</a>
-                            <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/sussasun/" target="_blank">sussasun</a>
-                        </div>
-                        <div class="teams">Proof by Checkmate vs Rook Takes Pawnshop</div>
-                    </div>
-                    <div class="score-badge">
-                        <div class="score-value">4.7</div>
-                        <div class="score-label">hype</div>
-                    </div>
-                </div>
-                <div class="reasons">
-                    <span class="reason">🔄 Rematch (0-1-1)</span>
-                    <span class="reason">🎖️ Veterans (243+69 games)</span>
                 </div>
             </div>
 
