--- a/top_storylines.html
+++ b/top_storylines.html
@@ -219,7 +219,7 @@
                         <div class="teams">Swindlers, patzers, and pawn pushers vs Panic! At The Chess Board</div>
                     </div>
                     <div class="score-badge">
-                        <div class="score-value">7.7</div>
+                        <div class="score-value">9.7</div>
                         <div class="score-label">hype</div>
                     </div>
                 </div>
@@ -227,6 +227,7 @@
                     <span class="reason">🔥 Both on win streaks (4W vs 2W)</span>
                     <span class="reason">🏆 Huge for team standings!</span>
                     <span class="reason">🎖️ Experience (24+150 games)</span>
+                    <span class="reason">🤝 Former teammates on The Stonewall Defenders</span>
                 </div>
             </div>
 
@@ -323,6 +324,29 @@
                     <div class="rank ">#6</div>
                     <div class="matchup">
                         <div class="players">
+                            <a href="https://www.lichess4545.com/team4545/player/yellorambo/" target="_blank">yellorambo</a>
+                            <span class="vs">vs</span>
+                            <a href="https://www.lichess4545.com/team4545/player/LemuelGullible/" target="_blank">LemuelGullible</a>
+                        </div>
+                        <div class="teams">The Old Man and the C-file vs Elo from the other side</div>
+                    </div>
+                    <div class="score-badge">
+                        <div class="score-value">5.4</div>
+                        <div class="score-label">hype</div>
+                    </div>
+                </div>
+                <div class="reasons">
+                    <span class="reason">🔄 Rematch (1-0-0)</span>
+                    <span class="reason">🎖️ Experience (53+90 games)</span>
+                    <span class="reason">🤝 Former teammates on Hey, you sass that hoopy Ding Liren?</span>
+                </div>
+            </div>
+
+            <div class="pairing-card">
+                <div class="pairing-header">
+                    <div class="rank ">#7</div>
+                    <div class="matchup">
+                        <div class="players">
                             <a href="https://www.lichess4545.com/team4545/player/PuntCatcher/" target="_blank">PuntCatcher</a>
                             <span class="vs">vs</span>
                             <a href="https://www.lichess4545.com/team4545/player/osumarko/" target="_blank">osumarko</a>
@@ -342,7 +366,7 @@
 
             <div class="pairing-card">
                 <div class="pairing-header">
-                    <div class="rank ">#7</div>
+                    <div class="rank ">#8</div>
                     <div class="matchup">
                         <div class="players">
                             <a href="https://www.lichess4545.com/team4545/player/sterpfi/" target="_blank">sterpfi</a>
@@ -364,7 +388,7 @@
 
             <div class="pairing-card">
                 <div class="pairing-header">
-                    <div class="rank ">#8</div>
+                    <div class="rank ">#9</div>
                     <div class="matchup">
                         <div class="players">
                             <a href="https://www.lichess4545.com/team4545/player/Logansglasses/" target="_blank">Logansglasses</a>
@@ -386,7 +410,7 @@
 
             <div class="pairing-card">
                 <div class="pairing-header">
-                    <div class="rank ">#9</div>
+                    <div class="rank ">#10</div>
                     <div class="matchup">
                         <div class="players">
                             <a href="https://www.lichess4545.com/team4545/player/Sarahwynn/" target="_blank">Sarahwynn</a>
@@ -403,28 +427,6 @@
                 <div class="reasons">
                     <span class="reason">💯 sarahwynn's 100th game!</span>
                     <span class="reason">🎖️ Experience (99+91 games)</span>
-                </div>
-            </div>
-
-            <div class="pairing-card">
-                <div class="pairing-header">
-                    <div class="rank ">#10</div>
-                    <div class="matchup">
-                        <div class="players">
-                            <a href="https://www.lichess4545.com/team4545/player/Feet_Barbie/" target="_blank">Feet_Barbie</a>
-                            <span class="vs">vs</span>
-                            <a href="https://www.lichess4545.com/team4545/player/jwwells42/" target="_blank">jwwells42</a>
-                        </div>
-                        <div class="teams">Hello to all! Good old faces! vs We are the Cham's peons</div>
-                    </div>
-                    <div class="score-badge">
-                        <div class="score-value">4.9</div>
-                        <div class="score-label">hype</div>
-                    </div>
-                </div>
-                <div class="reasons">
-                    <span class="reason">❄️ Both struggling (2L vs 3L)</span>
-                    <span class="reason">🎖️ Veterans (86+210 games)</span>
                 </div>
             </div>
 
