--- a/index.html
+++ b/index.html
@@ -310,6 +310,13 @@
                     </div>
                 </a>
                 
+                <a href="https://tranzoo-4545.github.io/4545nonsense/matchups.html" class="report-link featured">
+                    <div class="link-text">
+                        <span>⭐ Match Chronicles</span>
+                        <span class="link-arrow">→</span>
+                    </div>
+                </a>
+                
                 <a href="https://tranzoo-4545.github.io/4545nonsense/pairings_postround_report.html" class="report-link">
                     <div class="link-text">
                         <span>Notable Matchups</span>
